# ePredszkolaczek

./: .pre-commit-config.yaml  README.md  calculate_hours.py  calculate_presenting_and_hours.py  pyproject.toml
.github/workflows/: python-lint-tests.yml
src/: collected_data_from_api.py  collected_data_from_ui.py  helpers.py
tests/: test_unit.py  unit_tests.py
